Criação do ltxMenubar e terminado estrutura dos menus.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,8 @@
 CC = gcc
 CFLAGS = -I. `pkg-config --cflags gtk+-3.0`
 LIBS = `pkg-config --libs gtk+-3.0`
-SOURCES = ltxApp.c ltxWindow.c ltxFileCommands.c ltxStatusbar.c
-OBJECTS = ltxApp.o ltxWindow.o ltxFileCommands.o ltxStatusbar.o
+SOURCES = ltxApp.c ltxWindow.c ltxFileCommands.c ltxStatusbar.c ltxMenubar.c
+OBJECTS = ltxApp.o ltxWindow.o ltxFileCommands.o ltxStatusbar.o ltxMenubar.o
 EXECUTABLE = ltxApp
 
 ltxApp: $(OBJECTS)
@@ -19,6 +19,10 @@ ltxFileCommands.o: ltxFileCommands.c
 
 ltxStatusbar.o: ltxStatusbar.c
 	$(CC) $(CFLAGS) $(LIBS) -c ltxStatusbar.c
+
+ltxMenubar.o: ltxMenubar.c
+	$(CC) $(CFLAGS) $(LIBS) -c ltxMenubar.c
+
 
 clean:
 	rm *.o
