Definições helpmenu terminadas.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,8 @@
 CC = gcc
 CFLAGS = -I. `pkg-config --cflags gtk+-3.0`
 LIBS = `pkg-config --libs gtk+-3.0`
-SOURCES = ltxApp.c ltxWindow.c ltxFileCommands.c ltxStatusbar.c ltxMenubar.c
-OBJECTS = ltxApp.o ltxWindow.o ltxFileCommands.o ltxStatusbar.o ltxMenubar.o
+SOURCES = ltxApp.c ltxWindow.c ltxFileCommands.c ltxStatusbar.c ltxMenubar.c ltxHelpCommands.c
+OBJECTS = ltxApp.o ltxWindow.o ltxFileCommands.o ltxStatusbar.o ltxMenubar.o ltxHelpCommands.o
 EXECUTABLE = ltxApp
 
 ltxApp: $(OBJECTS)
@@ -22,6 +22,10 @@ ltxStatusbar.o: ltxStatusbar.c
 
 ltxMenubar.o: ltxMenubar.c
 	$(CC) $(CFLAGS) $(LIBS) -c ltxMenubar.c
+
+ltxHelpCommands.o: ltxHelpCommands.c
+	$(CC) $(CFLAGS) $(LIBS) -c ltxHelpCommands.c
+
 
 
 clean:
